--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./css/styles.css" type="stylesheet">
+    <link href="./css/styles.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
     <div class="card">
-
+        <div class="container">
+            <img class="yo" src="yo.png" />
+        </div>
     </div>
 </body>
 </html>
