--- a/index.html
+++ b/index.html
@@ -6,11 +6,38 @@
     <link href="./css/styles.css" rel="stylesheet">
     <title>Document</title>
 </head>
-<body>
+<body >
+    <div class="slider-thumb">
     <div class="card">
-        <div class="container">
-            <img class="yo" src="yo.png" />
+        <div class="card__content">
+            <div class="cont">
+                <img src="./yo.png" class="foto"/>
+                <div class="textos">
+                    <h1 class="nom">
+                        Jan Luis Juárez Avalos
+                    </h1>
+                    <h3 class="nom">Informatics Engineer<br>
+                        Frontend Developer
+                    </h3>
+                </div>
+            </div>
+            <div class="icons">
+                <button class="button" type="button">
+                    <span class="button__text">GitHub</span>
+                    <span class="button__icon"><img src="./github.png" /></span>
+                </button>
+                <button class="button" type="button">
+                    <span class="button__text">LinkedIn</span>
+                    <span class="button__icon"><img src="./linkedin.png" /></span>
+                </button>
+                <button class="button" type="button">
+                    <span class="button__text">Instagram</span>
+                    <span class="button__icon"><img src="./insta.png" /></span>
+                </button>
+            </div>
         </div>
+        
+    </div>
     </div>
 </body>
 </html>
